Use valueOf()
- Use diamonds
- Remove redundant parentheses
- No need to nest